fixed git ignore

--- a/frontend/src/theme/light/_smui-theme.scss
+++ b/frontend/src/theme/light/_smui-theme.scss
@@ -235,3 +235,17 @@ drawer is in a container on the page. */
 	align-items: center;
 	justify-content: center;
 }
+
+
+.paper-container {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform:translateX(-50%) translateY(-50%);
+	display: flex;
+	flex-direction: column;
+	height: 350px;
+	max-width: 100px;
+	overflow: hidden;
+	z-index: 999;
+}
